// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuideDrawer gets dismissed 1`] = `
<GuideContainer>
  <GuideInputRow>
    <CueIcon
      hasGuide={true}
    />
    <StyledTitle>
      1. Title 1
    </StyledTitle>
    <div
      className="close-button"
      onClick={[Function]}
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <CloseIcon />
    </div>
  </GuideInputRow>
  <StyledContent>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "Message 1 testorg",
        }
      }
    />
    <div
      style={
        Object {
          "marginTop": "1em",
        }
      }
    >
      <div>
        <Button
          disabled={false}
          onClick={[Function]}
          priority="success"
          size="small"
        >
          Next
           →
        </Button>
      </div>
    </div>
  </StyledContent>
</GuideContainer>
`;

exports[`GuideDrawer renders drawer 1`] = `
<StyledCueContainer
  className="assistant-cue"
  onClick={[Function]}
>
  <CueIcon
    hasGuide={true}
  />
  <StyledCueText>
    Click here for a tour of the issue page
  </StyledCueText>
  <div
    onClick={[Function]}
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <CloseIcon />
  </div>
</StyledCueContainer>
`;

exports[`GuideDrawer renders next step 1`] = `
<GuideContainer>
  <GuideInputRow>
    <CueIcon
      hasGuide={true}
    />
    <StyledTitle>
      2. Title 2
    </StyledTitle>
  </GuideInputRow>
  <StyledContent>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "Message 2",
        }
      }
    />
    <div
      style={
        Object {
          "marginTop": "1em",
        }
      }
    >
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <p>
          Did you find this guide useful?
        </p>
        <Button
          disabled={false}
          onClick={[Function]}
          priority="success"
          size="small"
        >
          Yes
             ✔
        </Button>
        <Button
          disabled={false}
          onClick={[Function]}
          priority="success"
          size="small"
          style={
            Object {
              "marginLeft": "0.25em",
            }
          }
        >
          No
             ✖
        </Button>
      </div>
    </div>
  </StyledContent>
</GuideContainer>
`;
